# organized-snippets

./: README.md
apl-challenges/: phase1.dyalog
refined-singletons/: stest.cabal
refined-singletons/src/: Main.hs
